--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Tourism website</title>
 
     <!-- External CSS file -->
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header starting as it contain nav and top section of the website -->
@@ -19,17 +19,17 @@
           <ul>
             <li>
               <a href="www.facebook.com"
-                ><img src="images/facebook-logo.png" alt="facebook"
+                ><img src="facebook-logo.png" alt="facebook"
               /></a>
             </li>
             <li>
               <a href="www.facebook.com"
-                ><img src="images/insta-logo.png" alt="facebook"
+                ><img src="insta-logo.png" alt="facebook"
               /></a>
             </li>
             <li>
               <a href="www.facebook.com"
-                ><img src="images/facebook-logo.png" alt="facebook"
+                ><img src="facebook-logo.png" alt="facebook"
               /></a>
             </li>
             <li>+1519-589-0548</li>
@@ -43,7 +43,7 @@
             <!-- Logo taken from https://pngtree.com/freepng/vector-illustration-fork-spoon-chef-hat-restaurant-logo_5455666.html -->
             <img
               class="image-logo"
-              src="images/footerlogo.png"
+              src="footerlogo.png"
               alt="mobileapp-logo"
             />
           </a>
@@ -68,23 +68,23 @@
     </header>
     <div id="carousel">
       <div id="left_button" class="button_panel">
-        <img src="images/arrowleft.png" alt="" />
+        <img src="arrowleft.png" alt="" />
       </div>
       <div id="display_panel">
         <ul id="image_list">
           <li>
-            <img src="images/slider1.jpg" alt="" />
+            <img src="slider1.jpg" alt="" />
           </li>
           <li>
-            <img src="images/slider2.jpg" alt="" />
+            <img src="slider2.jpg" alt="" />
           </li>
           <li>
-            <img src="images/slider3.jpg" alt="" />
+            <img src="slider3.jpg" alt="" />
           </li>
         </ul>
       </div>
       <div id="right_button" class="button_panel">
-        <img src="images/arrowright.png" alt="" />
+        <img src="arrowright.png" alt="" />
       </div>
     </div>
 
@@ -118,7 +118,7 @@
         <div class="about-box">
           <div class="offer-sec">
             <!-- Image Link: https://www.ingredion.com/content/dam/ingredion/usca-images/food/meat/cheeseburger-bread_720x560.jpg -->
-            <img src="images/nigara.jpg" alt="" />
+            <img src="nigara.jpg" alt="" />
             <h3>Niagara Falls</h3>
             <p>
               Niagara Falls is Canada's most famous natural attraction, bringing
@@ -130,7 +130,7 @@
           </div>
           <div class="offer-sec">
             <!-- Image Link: https://img.cdn4dd.com/cdn-cgi/image/fit=contain,width=600,format=auto,quality=50/https://cdn.doordash.com/media/consumer/home/landing/new/ev_fla_wel_alt.jpg -->
-            <img src="images/banff.jpg" alt="" />
+            <img src="banff.jpg" alt="" />
             <h3>Banff National Park & the Rocky Mountains</h3>
             <p>
               Banff National Park lies in the heart of the majestic Rocky
@@ -142,7 +142,7 @@
           </div>
           <div class="offer-sec">
             <!-- Image Link: https://media.istockphoto.com/photos/varied-food-carbohydrates-protein-vegetables-fruits-dairy-legumes-on-picture-id1218254547?b=1&k=20&m=1218254547&s=170667a&w=0&h=mOEC7x7qU5NC78mCULs-jAPeLkxy8opOvIbGSnwmAyw= -->
-            <img src="images/cn tower toronto.jpg" alt="" />
+            <img src="cn tower toronto.jpg" alt="" />
             <h3>Toronto's CN Tower</h3>
             <p>
               On the shores of Lake Ontario in Canada's biggest city is the
@@ -164,7 +164,7 @@
             <a href="index.html">
               <img
                 class="image-logo"
-                src="images/footerlogo.png"
+                src="footerlogo.png"
                 alt="mobileapp-logo"
               />
             </a>
@@ -193,10 +193,10 @@
           <h3>Follow Us on Social Media</h3>
           <div class="media_list">
             <a href="https://www.facebook.com/">
-              <img src="images/insta-logo.png" alt="" />
+              <img src="insta-logo.png" alt="" />
             </a>
             <a href="https://www.instagram.com/">
-              <img src="images/facebook-logo.png" alt="" />
+              <img src="facebook-logo.png" alt="" />
             </a>
           </div>
         </div>
